[package]
name = "bitmex-recorder"
version = "0.1.0"
authors = ["Nikolay Mikov <nik.mikov@gmail.com>"]
edition = "2018"

[profile.release]
#opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic

[dependencies]
enum-display-derive = "*"
log = "*"
env_logger = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.7", features = ["serde"] }

[dependencies.ws]
version = "*"
features = ["ssl"]
